--- a/index.html
+++ b/index.html
@@ -69,20 +69,22 @@
     /* --- Team Sheet Styling --- */
     .team-title { font-size:1.2rem; font-weight:bold; text-align:center; margin-bottom:10px; }
 
-    /* ✅ Formation now takes full width */
     .formation-container { display:flex; flex-direction:column; align-items:center; width:100%; }
     .formation-layout { width:100%; display:flex; flex-direction:column; align-items:center; gap:20px; }
 
-    /* ✅ Subs now centered below */
+    /* ✅ Subs section: now 75% width, centered, hidden if empty */
     .subs-section {
-      width:100%;
+      width:75%;
       background:#fafafa;
       border-radius:10px;
       padding:10px;
       border:1px solid #ddd;
       margin-top:16px;
       text-align:center;
+      display:none;
     }
+
+    .subs-section.visible { display:block; }
 
     .sub-card {
       padding:6px 10px;
@@ -195,6 +197,8 @@ function renderTeams(teams,teamSize,subsPerTeam){
     const subs=subsPerTeam[i]||[];
     const goalieTop=i%2===0;
 
+    const subsVisible=subs.length>0?"visible":"";
+
     if(teamSize===3){
       let top,midL,midR,bottom;
       if(goalieTop){top=goalie;midL=playersOnly[0];midR=playersOnly[1];bottom=playersOnly[2];}
@@ -206,9 +210,9 @@ function renderTeams(teams,teamSize,subsPerTeam){
           <div class="formation-layout">
             ${centeredRow(top)}${twoAcrossRow(midL,midR)}${centeredRow(bottom)}
           </div>
-          <div class="subs-section">
+          <div class="subs-section ${subsVisible}">
             <div style="font-weight:bold;">Subs</div>
-            ${subs.length?subs.map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join(""):`<div>None</div>`}
+            ${subs.map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join("")}
           </div>
         </div>
       </div>`);
@@ -227,9 +231,9 @@ function renderTeams(teams,teamSize,subsPerTeam){
         <div class="team-title">${displayName}</div>
         <div class="formation-container">
           <div class="formation-layout">${layoutHtml}</div>
-          <div class="subs-section">
+          <div class="subs-section ${subsVisible}">
             <div style="font-weight:bold;">Subs</div>
-            ${subs.length?subs.map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join(""):`<div>None</div>`}
+            ${subs.map(s=>`<div class="sub-card">${formatPlayer(s)}</div>`).join("")}
           </div>
         </div>
       </div>`);
