--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     }
 
     .row-center { display:flex; flex-direction:column; align-items:center; }
-    .row-two { width:100%; display:flex; justify-content:space-between; }
-    .row-three { width:100%; display:flex; justify-content:space-around; }
+    .row-two { width:80%; display:flex; justify-content:space-between; }
+    .row-three { width:100%; display:flex; justify-content:space-between; }
 
     .player-block { display:flex; flex-direction:column; align-items:center; }
 
