--- a/index.html
+++ b/index.html
@@ -66,13 +66,11 @@
 
     .team-size-container { display:flex; gap:8px; margin:6px 0 12px 0; }
 
-    /* --- Team Sheet Styling --- */
     .team-title { font-size:1.2rem; font-weight:bold; text-align:center; margin-bottom:10px; }
 
     .formation-container { display:flex; flex-direction:column; align-items:center; width:100%; }
     .formation-layout { width:100%; display:flex; flex-direction:column; align-items:center; gap:20px; }
 
-    /* ✅ Subs section: now 75% width, centered, hidden if empty */
     .subs-section {
       width:75%;
       background:#fafafa;
@@ -101,37 +99,27 @@
 
     .player-block { display:flex; flex-direction:column; align-items:center; }
 
-   .player-icon {
-  width: 80px;
-  height: 80px;
-  border: 3px solid #3a52a3;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
+    /* UPDATED PLAYER ICON (remove old embedded SVG) */
+    .player-icon {
+      width:80px;
+      height:80px;
+      border:3px solid #3a52a3;
+      border-radius:50%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background-color:white;
+    }
 
-  /* ➜ Use your real SVG file instead of embedded SVG */
-  background-image: url('t-shirt.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 70%;
-}
+    .player-icon.goalie {
+      border-color:#f34974;
+    }
 
-.player-icon.goalie {
-  border-color: #f34974;
-  background-image: url('t-shirt-goalie.svg');
-  background-size: 70%;
-}
-
-
-  /* Optional: use a different goalie shirt, or tint with CSS filter */
-  background-image: url('t-shirt.svg');
-  filter: hue-rotate(300deg) saturate(140%);
-}
-
-    .row-center .goalie, .row-two .goalie, .row-three .goalie {
-      align-self: center;
+    /* NEW: Shirt SVG styling */
+    .shirt-icon {
+      width:70%;
+      height:70%;
+      filter: var(--team-colour-filter);
     }
 
     .player-name { margin-top:6px; font-weight:600; text-align:center; }
@@ -192,7 +180,42 @@ function selectTeamSize(size,chip){document.getElementById("teamSize").value=siz
 function clearAllPlayers(){document.getElementById("names").value="";document.querySelectorAll("#playerChips .chip, #goalieChips .chip").forEach(c=>c.classList.remove("selected"));updateClearButtonVisibility();}
 function updateClearButtonVisibility(){const has=buildFinalPlayerPool().length>0||getSelectedGoalies().length>0;document.getElementById("clearChipsBtn").classList.toggle("visible",has);}
 function shuffle(a){for(let i=a.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[a[i],a[j]]=[a[j],a[i]];}}
-function generateTeams(){let players=buildFinalPlayerPool();const selectedGoalies=getSelectedGoalies();const teamSize=parseInt(document.getElementById("teamSize").value,10);if(!teamSize||teamSize<1){alert("Enter valid team size.");return;}if(selectedGoalies.length){const gSet=new Set(selectedGoalies.map(g=>g.toLowerCase()));players=players.filter(p=>!gSet.has(p.toLowerCase()));}shuffle(players);const numTeams=2;const teams=Array.from({length:numTeams},()=>[]);const subsPerTeam=Array.from({length:numTeams},()=>[]);for(let i=0;i<numTeams;i++){if(selectedGoalies.length){teams[i].push(selectedGoalies[i%selectedGoalies.length]+" (G)");}}let currentTeam=0;for(const player of players){const skaters=teams[currentTeam].filter(p=>!p.includes("(G)")).length;if(skaters<teamSize){teams[currentTeam].push(player);}else{subsPerTeam[currentTeam].push(player);}currentTeam=(currentTeam+1)%numTeams;}renderTeams(teams,teamSize,subsPerTeam);toolbar.style.display=document.getElementById("output").innerText.trim()?"flex":"none";if(!navigator.share)document.getElementById("shareTeamsBtn").style.display="none";}
+
+function generateTeams(){
+  let players=buildFinalPlayerPool();
+  const selectedGoalies=getSelectedGoalies();
+  const teamSize=parseInt(document.getElementById("teamSize").value,10);
+  if(!teamSize||teamSize<1){alert("Enter valid team size.");return;}
+  if(selectedGoalies.length){
+    const gSet=new Set(selectedGoalies.map(g=>g.toLowerCase()));
+    players=players.filter(p=>!gSet.has(p.toLowerCase()));
+  }
+  shuffle(players);
+  const numTeams=2;
+  const teams=Array.from({length:numTeams},()=>[]);
+  const subsPerTeam=Array.from({length:numTeams},()=>[]);
+  for(let i=0;i<numTeams;i++){
+    if(selectedGoalies.length){
+      teams[i].push(selectedGoalies[i%selectedGoalies.length]+" (G)");
+    }
+  }
+  let currentTeam=0;
+  for(const player of players){
+    const skaters=teams[currentTeam].filter(p=>!p.includes("(G)")).length;
+    if(skaters<teamSize){teams[currentTeam].push(player);}
+    else{subsPerTeam[currentTeam].push(player);}
+    currentTeam=(currentTeam+1)%numTeams;
+  }
+  renderTeams(teams,teamSize,subsPerTeam);
+  toolbar.style.display=document.getElementById("output").innerText.trim()?"flex":"none";
+  if(!navigator.share)document.getElementById("shareTeamsBtn").style.display="none";
+}
+
+/* NEW — Randomised colour filter per team */
+function randomColorFilter() {
+  const hue = Math.floor(Math.random() * 360);
+  return `hue-rotate(${hue}deg) saturate(160%) brightness(1.1)`;
+}
 
 function renderTeams(teams,teamSize,subsPerTeam){
   const teamNames=["The Five-Hole Fiddlers","Goal Diggers","Ball Blazers","Stick Flickers","The Mighty Dangles","Deez Sticks","Floor Fury","The Dirty Dekes","Stickflix and Chill","The Deflectors","Ballz Deep","Just the Tip-Ins","The Slap and Tickles"];
@@ -205,15 +228,17 @@ function renderTeams(teams,teamSize,subsPerTeam){
     if(playersOnly[0]&&playersOnly[0].includes("(G)")){goalie=playersOnly[0];playersOnly=playersOnly.slice(1);}
     const subs=subsPerTeam[i]||[];
     const goalieTop=i%2===0;
-
     const subsVisible=subs.length>0?"visible":"";
+
+    /* NEW — unique shirt colour per team */
+    const colourFilter = randomColorFilter();
 
     if(teamSize===3){
       let top,midL,midR,bottom;
       if(goalieTop){top=goalie;midL=playersOnly[0];midR=playersOnly[1];bottom=playersOnly[2];}
       else{top=playersOnly[0];midL=playersOnly[1];midR=playersOnly[2];bottom=goalie;}
       out.insertAdjacentHTML("beforeend",`
-      <div class="team">
+      <div class="team" style="--team-colour-filter:${colourFilter}">
         <div class="team-title">${displayName}</div>
         <div class="formation-container">
           <div class="formation-layout">
@@ -236,7 +261,7 @@ function renderTeams(teams,teamSize,subsPerTeam){
         ${threeAcrossRow(p[0],p[1],p[2])}${twoAcrossRow(p[3],p[4])}${centeredRow(g)}
       `;
       out.insertAdjacentHTML("beforeend",`
-      <div class="team">
+      <div class="team" style="--team-colour-filter:${colourFilter}">
         <div class="team-title">${displayName}</div>
         <div class="formation-container">
           <div class="formation-layout">${layoutHtml}</div>
@@ -250,10 +275,44 @@ function renderTeams(teams,teamSize,subsPerTeam){
   });
 }
 
-function threeAcrossRow(l,m,r){return `<div class="row-three">${[l,m,r].map(x=>`
-<div class="player-block"><div class="player-icon${x&&x.includes('(G)')?' goalie':''}"></div><div class="player-name">${formatPlayer(x)}</div></div>`).join("")}</div>`;}
-function centeredRow(p){return p?`<div class="row-center"><div class="player-icon${p.includes('(G)')?' goalie':''}"></div><div class="player-name">${formatPlayer(p)}</div></div>`:`<div class="row-center"><div style="height:46px"></div></div>`;}
-function twoAcrossRow(l,r){return `<div class="row-two"><div class="player-block"><div class="player-icon${l&&l.includes('(G)')?' goalie':''}"></div><div class="player-name">${formatPlayer(l)}</div></div><div class="player-block"><div class="player-icon${r&&r.includes('(G)')?' goalie':''}"></div><div class="player-name">${formatPlayer(r)}</div></div></div>`;}
+/* UPDATED — inserted <img src="t-shirt.svg"> */
+
+function threeAcrossRow(l,m,r){return `
+<div class="row-three">
+${[l,m,r].map(x=>`
+  <div class="player-block">
+    <div class="player-icon${x&&x.includes('(G)')?' goalie':''}">
+      <img src="t-shirt.svg" class="shirt-icon">
+    </div>
+    <div class="player-name">${formatPlayer(x)}</div>
+  </div>`).join("")}
+</div>`;}
+
+function centeredRow(p){return p?`
+<div class="row-center">
+  <div class="player-icon${p.includes('(G)')?' goalie':''}">
+    <img src="t-shirt.svg" class="shirt-icon">
+  </div>
+  <div class="player-name">${formatPlayer(p)}</div>
+</div>`:
+`<div class="row-center"><div style="height:46px"></div></div>`;}
+
+function twoAcrossRow(l,r){return `
+<div class="row-two">
+  <div class="player-block">
+    <div class="player-icon${l&&l.includes('(G)')?' goalie':''}">
+      <img src="t-shirt.svg" class="shirt-icon">
+    </div>
+    <div class="player-name">${formatPlayer(l)}</div>
+  </div>
+  <div class="player-block">
+    <div class="player-icon${r&&r.includes('(G)')?' goalie':''}">
+      <img src="t-shirt.svg" class="shirt-icon">
+    </div>
+    <div class="player-name">${formatPlayer(r)}</div>
+  </div>
+</div>`;}
+
 function formatPlayer(p){if(!p)return"";return p.includes("(G)")?`🥅 ${p.replace("(G)","").trim()}`:p;}
 
 const toolbar=document.getElementById("exportToolbar");
