--- a/index.html
+++ b/index.html
@@ -116,11 +116,14 @@
     }
 
     /* NEW: Shirt SVG styling */
-    .shirt-icon {
-      width:70%;
-      height:70%;
-      filter: var(--team-colour-filter);
-    }
+   .shirt-icon {
+  width: 70%;
+  height: 70%;
+  filter: var(--team-colour-filter);
+}
+.shirt-icon path {
+  fill: black;
+}
 
     .player-name { margin-top:6px; font-weight:600; text-align:center; }
 
@@ -130,6 +133,11 @@
   </style>
 </head>
 <body>
+  <!-- Hidden inline SVG definition for team-coloured shirts -->
+<svg id="shirt-svg-template" style="display:none" viewBox="0 0 100 100">
+  <path d="M20 10 L40 10 L50 25 L60 10 L80 10 L90 30 L75 40 L75 85 L25 85 L25 40 L10 30 Z" fill="black"/>
+</svg>
+
 <h1>Floorball Team Picker</h1>
 
 <div class="chips-header">
@@ -282,7 +290,9 @@ function threeAcrossRow(l,m,r){return `
 ${[l,m,r].map(x=>`
   <div class="player-block">
     <div class="player-icon${x&&x.includes('(G)')?' goalie':''}">
-      <img src="t-shirt.svg" class="shirt-icon">
+      <svg class="shirt-icon">
+        ${document.getElementById('shirt-svg-template').innerHTML}
+      </svg>
     </div>
     <div class="player-name">${formatPlayer(x)}</div>
   </div>`).join("")}
@@ -291,27 +301,35 @@ ${[l,m,r].map(x=>`
 function centeredRow(p){return p?`
 <div class="row-center">
   <div class="player-icon${p.includes('(G)')?' goalie':''}">
-    <img src="t-shirt.svg" class="shirt-icon">
+    <svg class="shirt-icon">
+      ${document.getElementById('shirt-svg-template').innerHTML}
+    </svg>
   </div>
   <div class="player-name">${formatPlayer(p)}</div>
 </div>`:
 `<div class="row-center"><div style="height:46px"></div></div>`;}
 
+
 function twoAcrossRow(l,r){return `
 <div class="row-two">
   <div class="player-block">
     <div class="player-icon${l&&l.includes('(G)')?' goalie':''}">
-      <img src="t-shirt.svg" class="shirt-icon">
+      <svg class="shirt-icon">
+        ${document.getElementById('shirt-svg-template').innerHTML}
+      </svg>
     </div>
     <div class="player-name">${formatPlayer(l)}</div>
   </div>
   <div class="player-block">
     <div class="player-icon${r&&r.includes('(G)')?' goalie':''}">
-      <img src="t-shirt.svg" class="shirt-icon">
+      <svg class="shirt-icon">
+        ${document.getElementById('shirt-svg-template').innerHTML}
+      </svg>
     </div>
     <div class="player-name">${formatPlayer(r)}</div>
   </div>
 </div>`;}
+
 
 function formatPlayer(p){if(!p)return"";return p.includes("(G)")?`🥅 ${p.replace("(G)","").trim()}`:p;}
 
