--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     .player-icon {
       width:80px;
       height:80px;
-      border:3px solid #3a52a3;
+      border:2px dashed rgb(0 0 0 / 0%)
       border-radius:50%;
       display:flex;
       align-items:center;
@@ -113,7 +113,7 @@
     }
 
     .player-icon.goalie {
-      border-color:#f34974;
+      border-color:#f34471;
     }
 
     /* NEW: Shirt SVG styling */
