--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     .player-icon {
       width:80px;
       height:80px;
-      border:2px dashed rgb(0 0 0 / 0%)
+      border:2px dashed rgb(0 0 0 / 0%);
       border-radius:50%;
       display:flex;
       align-items:center;
